Initialize logging for Chrome watcher process

BUG=715060

Review-Url: https://codereview.chromium.org/2850863002
Cr-Commit-Position: refs/heads/master@{#468316}

Former-commit-id: 3016c7260fec3bd2485a0377166bb0aa52112a15